--- a/Devrij.html
+++ b/Devrij.html
@@ -27,7 +27,7 @@
                 SCRIVI AL GIOCATORE PREFERITO!!! <br><br>  
                 <a href="home.html" >
                 </h3>   
-                <a href="home.html" class="link">
+                <a href="index.html" class="link">
                     torna alla formazione
                     </a>
     </p>
