--- a/Devrij.html
+++ b/Devrij.html
@@ -25,7 +25,7 @@
         <h3>
                 <a href="form.html" class="link">
                 SCRIVI AL GIOCATORE PREFERITO!!! <br><br>  
-                <a href="home.html" >
+                <a href="index.html" >
                 </h3>   
                 <a href="index.html" class="link">
                     torna alla formazione
