--- a/Handanovic.html
+++ b/Handanovic.html
@@ -26,7 +26,7 @@
         SCRIVI AL GIOCATORE PREFERITO!!! <br><br>  
         
         </h3>   
-        <a href="home.html" class="link">
+        <a href="index.html" class="link">
         torna alla formazione
         </a>
     </p>
