--- a/Lautaro.html
+++ b/Lautaro.html
@@ -23,9 +23,9 @@
         <h3>
                 <a href="form.html" class="link">
                 SCRIVI AL GIOCATORE PREFERITO!!! <br><br>  
-                <a href="home.html" >
+                <a href="index.html" >
                 </h3>   
-                <a href="home.html" class="link">
+                <a href="index.html" class="link">
                     torna alla formazione
                     </a>
     </p>
