--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
         <br><br><br>
         *campi obbligatori
         <br><br><br>
-        <a href="home.html" style="color: aliceblue">
+        <a href="index.html" style="color: aliceblue">
             tornare alla formazione
     </form>
    
